fix check age
